@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

title Class Diagram

class Item {
    - id
    - name
    - price
    - status
    - idCategoria
}

class Category {
    - id
    - description
}

enum Status {
    - available
    - sold
}

class Sale {
    - id
    - date
    - salePrice
    - itemId
}

class AuctionBid {
    - id
    - date
    - clientId
    - itemId
    - finalPrice
}

class Client {
    - id
    - name
    - nif
    - email
    - phone
}

Item --> "1" Category : cataloged as
Item ---> "1" Sale: is in >
Status ---> "1..*" Item : has <
Client --> "0..*" AuctionBid : has >
AuctionBid --> "1" Sale: includes >

@enduml